--- a/package.json
+++ b/package.json
@@ -6,40 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/kv": "^1.0.0",
-    "openai": "^4.20.0",
-    "@anthropic-ai/sdk": "^0.9.0",
-    "@google-ai/generativelanguage": "^1.0.0",
-    "stripe": "^14.0.0",
-    "next-auth": "^4.24.0",
-    "prisma": "^5.6.0",
-    "@prisma/client": "^5.6.0",
-    "zod": "^3.22.0",
+    "next": "14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "lucide-react": "^0.292.0",
     "react-hot-toast": "^2.4.1",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "typescript": "^5.2.2",
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.37",
-    "axios": "^1.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "react-diff-viewer": "^3.1.1",
-    "recharts": "^2.9.0",
-    "lucide-react": "^0.292.0"
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.5",
-    "@types/jsonwebtoken": "^9.0.5",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5.3.0",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.2.0"
   }
 }
