--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "scientific-translator-b2b",
-  "version": "1.0.0",
+  "name": "translate-ai",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "next": "14.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "lucide-react": "^0.292.0",
-    "react-hot-toast": "^2.4.1",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
+    "typescript": "^5.3.2",
     "@types/node": "^20.10.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.2.0"
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
