--- a/package.json
+++ b/package.json
@@ -8,19 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.18.0",
+    "anthropic": "^0.0.0",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "litellm": "^0.12.0",
+    "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "next-auth": "^4.24.13",
+    "openai": "^6.7.0",
+    "prisma": "^6.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lucide-react": "^0.292.0",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.2",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "dotenv-cli": "^11.0.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.2"
   }
 }
